# Delta

./: .gitignore  CMakeLists.txt  SinUI.sln  test.xml
Delta/: Delta.sln  Delta.vcxproj  Delta.vcxproj.filters
Delta/include/Delta/: dt_model_v2.h
Delta/source/: dt_model.cpp  model_test.cpp
Notes/: composability.md
SinUI/: SinUI.vcxproj
include/Delta/: common.h  dt_common.h  dt_layout.h  dt_model.h  dt_template.h  layout.h  model.h  render_command.h  template.h
notes/: xml.md
private/: dt_build_private.h  font_loader.h  serializer.h
source/: common.c  dt_common.c  dt_layout.c  dt_template.c  font_loader.cpp  layout.c  main.c  main.cpp  model.c  serializer.cpp  template.c  vec3.c
